# epsilon-code

./: .gitignore  LICENSE  README.md  generate_figures.py  generate_figures_final.py  generate_figures_v3.py  generate_figures_v4.py  generate_figures_v5.py  pyproject.toml  requirements.txt
benchmark/: analyze_ensemble.py  analyze_epsilon_pr.py  analyze_failures.py  analyze_filtering_stages.py  analyze_p_avg.py  analyze_token_focus.py  benchmark_calibration.py  benchmark_multisample.py  benchmark_p_avg_review.py  benchmark_production.py  benchmark_scenario_e_collapse.py  benchmark_scenarios.py  benchmark_uqlm.py  calibrate_thresholds.py  ground_truth_low.py  review_loop.py
benchmark/results/: benchmark_gpt-4-turbo.json  benchmark_gpt-4o-mini.json  benchmark_gpt-4o.json  benchmark_gpt-4o_nonaming_staged.json  benchmark_gpt-4o_staged.json  benchmark_uqlm.json  calibration_deepseek-ai_DeepSeek-V3.json  epsilon_pr_analysis.json  ground_truth_low.json  multisample_deepseek_ai_DeepSeek_V3.json  multisample_gpt_4_turbo.json  multisample_gpt_4o.json  multisample_gpt_4o_mini.json  p_avg_results.json  p_avg_review_results.json  production_deepseek-ai_DeepSeek-V3.json  production_gpt-4o-mini.json  production_gpt-4o.json  review_results.json  review_results_baseline.json  review_results_phase1.json  (+6 more)
demos/: demo_scenario_a.py  demo_scenario_b.py  demo_scenario_c.py  demo_scenario_d.py  demo_scenario_e.py
epsilon/: __init__.py  core.py  logger.py  renderer.py
paper/: OPUS_EDITS_v5_citations.md  OPUS_EDITS_v5_structural.md  OPUS_REDUNDANCY_AUDIT.md  main.tex  references.bib
(+49 files in other folders)
